# tile_hammering_application

./: .gitignore  README.md  main.py  pyproject.toml
app/base/: controller.py  model.py  view.py
app/main/: main.py
app/menu/: controller.py  view.py
app/model/: model.py  read.py  rub.py
app/pipeline/: bandpass.py  fft.py  gmm.py  mel.py  pipeline.py  stft.py  zscore.py
app/test/: controller.py  view.py
app/train/: controller.py  view.py
app/ui/: menu.ui  test.ui  train.ui
app/util/: read.py  timer.py  trigger.py  window.py
sandbox/: 00_pipeline調査.ipynb  01_triggerスタートできない問題.ipynb  02_フィルタ調査.ipynb  03_閾値について.ipynb  04_sdのエラーについて.ipynb  04a_error_sd.py
sandbox/00_調整可能な棒グラフ/: layout.ui  main.py
sandbox/01_QtDesignerで作成したUIの読み込み/: condition_setting.ui  controller.py  layout.ui  main.py  menu.ui  model.py  sandbox.py  test.ui  view.py
sandbox/02_音と映像の表示/: controller.py  layout.ui  main.py  model.py  view.py
sandbox/03_スライダーのMVC設計/: controller.py  layout.ui  main.py  model.py  view.py
sandbox/04_マイクの値調査/: 00_ノートブックで試す.ipynb
sandbox/05_閾値の描画/: controller.py  layout.ui  main.py  model.py  random_generator.py  view.py
sandbox/06_マイクとカメラのMVC設計/: controller.py  main.py  model.py  timer.py  view.py  window1.ui  window2.ui
sandbox/08_異常度の描画/: main.py  untitled.ui
sandbox/09_転がしGMMスニペット/: base.py  controller.py  main.py  model.py  rub.py  timer.py  untitled.ui  view.py
sandbox/09_転がしGMMスニペット/pipeline/: bandpass.py  fft.py  gmm.py  mel.py  pipeline.py  stft.py  zscore.py
