[project]
name = "tile-hammering-application"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.0",
    "librosa>=0.11.0",
    "matplotlib>=3.10.3",
    "opencv-python>=4.12.0.88",
    "pycaw>=20240210",
    "pyqt5>=5.15.11",
    "pyqtgraph>=0.13.7",
    "pyyaml>=6.0.2",
    "qdarkstyle>=3.2.3",
    "qt5-applications>=5.15.2.2.3",
    "scikit-learn>=1.7.1",
    "sounddevice>=0.5.2",
]

[tool.uv]
environments = ["sys_platform == 'win32'"]
required-environments = [
  "sys_platform == 'win32' and platform_machine == 'AMD64'",
]
